tests/snapshots/source_loading__00.snap
---
source: tests/source_loading.rs
expression: outcome
---
Ok(
    (
        KeySource(
            1v1,
        ),
        {
            "./tests/source_loading/00-the-simplest-case.yaml": Source {
                source_file: "./tests/source_loading/00-the-simplest-case.yaml",
                subs: {},
                scenario: Scenario {
                    types: [],
                    subs: [],
                    cast: [],
                    events: [],
                    no_extra: NoExtra,
                },
            },
        },
    ),
)
