tests/snapshots/source_loading__02.a.snap
---
source: tests/source_loading.rs
expression: outcome
---
Err(
    SourceFileCyclicDependency(
        "tests/source_loading/02-direct-cyclic-inclusion.luci.yaml",
    ),
)
